<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>imu_filter_madgwick</name>
  <version>1.2.1</version>
  <description>  
  Filter which fuses angular velocities, accelerations, and (optionally) magnetic readings from a generic IMU device into an orientation. Based on code by Sebastian Madgwick, http://www.x-io.co.uk/node/8#open_source_ahrs_and_imu_algorithms.
  </description>
  <license>GPL</license>
  <url>http://ros.org/wiki/imu_filter_madgwick</url>
  <author>Ivan Dryanovski</author>
  <maintainer email="martin.guenther1980@gmail.com">Martin Günther</maintainer>
  <maintainer email="ivan.dryanovski@gmail.com">Ivan Dryanovski</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <!-- <build_depend>nodelet</build_depend> -->
  <build_depend>pluginlib</build_depend>
  <build_depend>message_filters</build_depend>
  <!-- <build_depend>dynamic_reconfigure</build_depend> -->

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <!-- <exec_depend>nodelet</exec_depend> -->
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <!-- <exec_depend>dynamic_reconfigure</exec_depend> -->

  <!-- <test_depend>rosunit</test_depend> -->
<!--
  <export>
    <nodelet plugin="${prefix}/imu_filter_nodelet.xml" />
  </export> -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
